--- a/Ortho4XP.cfg
+++ b/Ortho4XP.cfg
@@ -10,13 +10,16 @@ max_connect_retries=5
 max_baddata_retries=5
 ovl_exclude_pol=[0]
 ovl_exclude_net=[]
-custom_scenery_dir=
-custom_overlay_src=
+custom_scenery_dir=G:/X-Plane 11/Custom Scenery
+custom_overlay_src=G:/X-Plane 11/Custom Scenery/zzz_hd_global_scenery4
+apt_smoothing_pix=8
 road_level=1
 road_banking_limit=0.5
+lane_width=5.0
 max_levelled_segs=100000
+water_simplification=0.0
 min_area=0.001
-max_area=200
+max_area=200.0
 clean_bad_geometries=True
 mesh_zl=19
 curvature_tol=2.0
@@ -27,7 +30,6 @@ coast_curv_ext=0.5
 limit_tris=0
 hmin=0.0
 min_angle=10.0
-apt_smoothing_pix=8
 sea_smoothing_mode=zero
 water_smoothing=10
 iterate=0
@@ -35,6 +37,7 @@ mask_zl=14
 masks_width=100
 masking_mode=sand
 use_masks_for_inland=False
+imprint_masks_to_dds=False
 masks_use_DEM_too=False
 masks_custom_extent=
 cover_airports_with_highres=False
